collapsable navbar bug-fixes

--- a/style.css
+++ b/style.css
@@ -93,17 +93,15 @@ body {
 /* utility glow class */
 .glow {
     text-decoration: none;
-}
-
-.padded {
-    padding-left: 5px;
-    padding-right: 5px;
+    transition-property: all;
+    transition-timing-function:  cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 0.15s;
 }
 
 .glow:hover {
     cursor: pointer;
     color: var(--text);
-    transition: 0.3s;
+    
 }
 
 
@@ -178,13 +176,12 @@ body {
 
 #menu {
     padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 1rem;
-    font-weight: 500;
-    font-size: 1.05rem;
     border-bottom: 1px solid var(--grey-100);
+}
+
+.menu_content{
+    font-weight: 500;
+    font-size: 1rem;
 }
 
 .watermark {
